--- a/lenguajes/css.html
+++ b/lenguajes/css.html
@@ -37,6 +37,12 @@
       ejemplo :hover (aplicará un estilo cuando el usuario haga hover 
       sobre el elemento especificado por el selector) 
     </p>
-    <p> </p>
+    <h2>Contenedores y responsive desing </h2>
+    <p>Hagamos algo de diseño.</p>
+    <p>Tamaño intrínseco (look and file) </p>
+    <p>aria-lable='retrocecer 10s' (Para especificar un texto a una etiqueta sin texto) </p>
+    <p>title='un_título' (Para que aparesca cuando se hace foco sobre el elemento) </p>
+    <p>poster='ruta_del_poster' (Para que aparesca una imagen al inicio del elemento)</p>
+    <p>.player (Para crear un contenedor cuya clase se llama 'player')</p>
   </body>
 </html>
