cambios con PUG y templates

--- a/index.html
+++ b/index.html
@@ -1,49 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Manuales en texto por Henry Flores</title>
-    <style media="screen">
-
-    </style>
-  </head>
-  <body>
-    <h1>En esta página se irán agregando temas, manuales y sus ejemplos de uso en la práctica:</h1>
-    <dl class="">
-      <dt><a href="./lenguajes/html.html">Manual de HTML</a></dt>
-        <dd>Breve teoría y ejemplo de uso manteniendo en lo posible sus nombres en inglés.</dd>
-      <dt><a href="./lenguajes/css.html">Manual de CSS</a></dt>
-        <dd>Breve teoría y ejemplos de uso prácticos</dd>
-      <dt><a href="./lenguajes/javascript.html">Manual de JavaScrip</a></dt>
-        <dd>Breve teoría y ejemplos de uso prácticos</dd>
-      <dt><a href="./lenguajes/git.html">Manual de git</a></dt>
-        <dd>Breve teoría y eiemplos de uso prácticos</dd>
-      <dt><a href="./nivel1/matematicas.html">Sección Matemáticas</a></dt>
-        <dd>Esta es una sección temporal para las matemáticas</dd>
-      <dt><a href="./nivel1/english.html">Diccionario de Inglés</a></dt>
-        <dd>Lista de palabras en inglés</dd>
-      <dt><a href="./programs/excel2016.html">Manual de Excel 365</a></dt>
-        <dd>Primer manual de excel 365 nivel básico</dd>
-      <dt> <strong style=color:red> Próximos manuales </strong></dt>
-        <dd><a href="#">Para futuros manuales y cursos en Youtube</a> </dd>
-        <dd><a href="./programs/pug.html">Comando básicos de PUG</a></dd>
-        <dd><a href="./programs/gnulinux.html">Comando básicos de GNU/Linux</a></dd>
-        <dd><a href="./programs/electronics.html">Fundamentos de electrónica</a></dd>
-      <dt>
-        <details>
-            <summary>
-              Proyectos
-            </summary>
-              <ul>
-                <li><a href="#">Apps para ANDROID</a></li>
-                <li><a href="#">Apps para IPHONE</a></li>
-              </ul>
-        </details>
-        
-      </dt>
-
-    </dl>
-
-    <footer><center/> Creado por Henry Flores en el 2018 &copy;</footer>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enlace temporal</title>
+</head>
+<body style='background-color: aquamarine;'>
+    <h1>Hola a todos y hola mundo!</h1>
+        <a href="./public/index.html">Ingresa aquí</a>
+    
+</body>
 </html>
