--- a/public/paginas/nivel1/english.html
+++ b/public/paginas/nivel1/english.html
@@ -52,7 +52,8 @@
     <p>Forward : V. Reenviar, enviar, avanzar, Adv. Adelante, Adj. Delantero, avanzado</p>
     <p>Label S. Etiqueta, V. Etiquetar, calificar</p>
     <p>As Adv. Como, mientas, ya que, lo que, donde, Conjugación. de, mientras, cuando, Preposición por, como</p>
-    <p></p>
+    <p>Alphabet S. Alfabeto, abecedario, escritura</p>
+    
 
   </body>
 </html>
