cambios a ingles.html

--- a/public/paginas/nivel1/english.html
+++ b/public/paginas/nivel1/english.html
@@ -25,6 +25,7 @@
     <p>"i.e" y "e.g": qué significan y cómo usarlos. (i.e) es la sigla de
       "id est" "es decir", "that is to say", "that is"
     </p>
+    <p>En ingles no hay ñ, ll, ch, ni acentos</p>
     <p>
       "e.g": "por ejemplo" , "for example"
     </p>
@@ -53,7 +54,27 @@
     <p>Label S. Etiqueta, V. Etiquetar, calificar</p>
     <p>As Adv. Como, mientas, ya que, lo que, donde, Conjugación. de, mientras, cuando, Preposición por, como</p>
     <p>Alphabet S. Alfabeto, abecedario, escritura</p>
-    
+    <p>Vowels S. Vocales</p>
+    <p>Apple S. Manzana (block, square)</p>
+    <p>Bird S. Pájaro, ave, novia</p>
+    <p>Crown S. Corona Verb. Coronar</p>
+    <p>Hill S. Colina, cerro, montaña, cuesta, otero</p>
+    <p>Dress S. Vestido, ropa Verb. Vestir, vestirse, </p>
+    <p>Eye S. Ojo, yema, hembra Verb. Mirar, observar, ver, ojear</p>
+    <p>Faucet S. Grifo, llave</p>
+    <p>Grapes S. Uvas</p>
+    <p>Jacket S. Chaqueta, camisa, saco</p>
+    <p>Notes S. Nota, apunte, memoria Verb. Observar, indicar</p>
+    <p>Rain S. Lluvia</p>
+    <p>Teapot S. Tetera</p>
+    <p>Yolk S. Yema de huevo</p>
+    <p>Zipper (P Si o Zi) S. Cierre, cremallera</p>
+    <p>+ Additon, sum, altogether,all, in all, together, total, total number add</p>
+    <p>- Subtraction, minus, greater than, more than</p>
+    <p>x Multiplication</p>
+    <p>&#246; &#xf7; Division</p>
+    <p></p>
+
 
   </body>
 </html>
