cambios a español gramatica

--- a/public/paginas/nivel1/english.html
+++ b/public/paginas/nivel1/english.html
@@ -69,10 +69,11 @@
     <p>Teapot S. Tetera</p>
     <p>Yolk S. Yema de huevo</p>
     <p>Zipper (P Si o Zi) S. Cierre, cremallera</p>
-    <p>+ Additon, sum, altogether,all, in all, together, total, total number add</p>
-    <p>- Subtraction, minus, greater than, more than</p>
-    <p>x Multiplication</p>
-    <p>&#246; &#xf7; Division</p>
+    <p>+ Plus, Additon, sum, altogether,all, in all, together, total, total number add</p>
+    <p>- Minus,Subtraction, minus, greater than, more than</p>
+    <p>x Times,Multiplication</p>
+    <p>&#246; &#xf7; Divided by, Division</p>
+    <p>= Equals, Equal</p>
     <p></p>
 
 
