--- a/public/paginas/nivel1/grammar/everbs.html
+++ b/public/paginas/nivel1/grammar/everbs.html
@@ -42,6 +42,8 @@
     <p>
         owe (deber), tener deudas.
     </p>
+    <p>Hear, listen (Escuchar), heard (Pasado), hearing (Presenten participio), heard (Pasado participio)
+        hears (Tercera persona de infinitivo) </p>
     <p></p>
 </head>
 <body>
