--- a/public/paginas/nivel1/grammar/sgrammar.html
+++ b/public/paginas/nivel1/grammar/sgrammar.html
@@ -7,6 +7,16 @@
     <title>Gramática del Español</title>
 </head>
 <body>
+    <h1>Participio</h1>
+        <p>Hay dos participios, el activo o presente, amante, estudiante, dirigente, y el pasivo
+            o pasado, amado, estudiado, dirigido.
+        </p>
+        <p>El participio activo es sustantivo. No tiene función verbal alguna.</p>
+        <p>El participio pasado es adjetivo, mi hijo amado, el texto estudiado, un discípulo
+            sabiamente dirigido. Como adjetivo se puede convertir en sustantivo, mi amando yace 
+            espectante. También puede ir en el núcleo de la oración siempre que le preseda un 
+            verbo auxiliar, ha sido <strong style='color:red'>amado</strong>, hemos estudiado. 
+        </p>
     
 </body>
 </html>
