--- a/public/paginas/nivel1/english.html
+++ b/public/paginas/nivel1/english.html
@@ -22,6 +22,7 @@
     <p><a href="./grammar/egrammar.html">Gramática del Inglés</a></p>
     <p><a href="./grammar/everbs.html">Verbos en Inglés</a></p>
     <p><a href="./grammar/sverbs.html">Verbos en Español e Inglés</a></p>
+    <p><a href="./grammar/sgrammar.html">Gramática del Español</a></p>
     <p>"i.e" y "e.g": qué significan y cómo usarlos. (i.e) es la sigla de
       "id est" "es decir", "that is to say", "that is"
     </p>
