cambio de lugar programs

--- a/public/paginas/nivel1/grammar/everbs.html
+++ b/public/paginas/nivel1/grammar/everbs.html
@@ -44,7 +44,8 @@
     </p>
     <p>Hear, listen (Escuchar), heard (Pasado), hearing (Presenten participio), heard (Pasado participio)
         hears (Tercera persona de infinitivo) </p>
-    <p></p>
+    <p>Settle (resolver) settled (Pasado), settling (Presenten participio), settled (Pasado participio)
+        settles (Tercera persona de infinitivo)</p>
 </head>
 <body>
     
