--- a/public/paginas/nivel1/grammar/sgrammar.html
+++ b/public/paginas/nivel1/grammar/sgrammar.html
@@ -17,6 +17,14 @@
             espectante. También puede ir en el núcleo de la oración siempre que le preseda un 
             verbo auxiliar, ha sido <strong style='color:red'>amado</strong>, hemos estudiado. 
         </p>
+        <p>La mayoría de los participios pasados terminan en -ado, o -ido, hay irregulares que
+            terminan en muerto, dicho, hecho. Algunos verbos tienen dos participios pasados
+            válidos, impreso e imprimido, tinto y tinturado, electo y elegido, pago y pagado.
+            Las terminaciones regulares se usan más en frases verbales y las irregulares como 
+            adjetivos. Cuando el participio cumple el papel del adjetivo, puede tomar las formas 
+            propias del femenino, hija amada.
+        </p>
+
     
 </body>
 </html>
