--- a/public/paginas/programs/excel2016.html
+++ b/public/paginas/programs/excel2016.html
@@ -31,7 +31,7 @@
         para hoja de cálculo de PC.
     </p>
     <h2>Partes de la ventana del programa</h2>
-    <p><strong>Barra de aceeso rápido</strong> o quick access bar:
+    <p><strong>Barra de acceso rápido</strong> o quick access bar:
          Para poner en pantalla los comandos que uso con frecuencia.
          Es configurable y son tres lo niveles en los que puedo
          encontrar botones para añadir a la "quick access bar".
