cambios a excel.html

--- a/public/paginas/programs/excel2016.html
+++ b/public/paginas/programs/excel2016.html
@@ -36,7 +36,7 @@
          Es configurable y son tres lo niveles en los que puedo
          encontrar botones para añadir a la "quick access bar".
     </p>
-    <img src="../images/qab.png" alt="Quick access bar" width="800" height="600">
+    <img src="../../images/qab.png" alt="Quick access bar" width="800" height="600">
     <p> Bajo el "bar" se encuentran las cintas de opciones que contienen
         los comandos más usados distribuidos en pestañas que contienen
         los botones con los comandos y que se organizan por categorías.
@@ -44,7 +44,7 @@
         grupo. Algunos nombres de categoría tiene un botón en la Parte
         inferior derecha que permite acceder a más commandos.
     </p>
-    <img src="../images/category.png" alt="category" width="800" height="600">
+    <img src="../../images/category.png" alt="category" width="800" height="600">
     <p>
         Bajo las cintas de opciones, en la parte inferior izquierda, tenemos
         el cuadro de nombres (name box) que tiene muchas funcionalidades.
