Estado del proyecto Set_2021

--- a/public/paginas/nivel1/grammar/phrases.html
+++ b/public/paginas/nivel1/grammar/phrases.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html lang="es"> 
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="description" content="somos chéveres">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phrases</title>
-</head>
-<body>
-    <p>So Así que, entonces</p>
-    <p>Are you ready? ¿Estas listo?</p>
-    <p></p>
-    
-</body>
+    <meta name="vievport" content="width=device-width, initial-scale=1.0">
+    <title>Bienvenido- recyclemy.website</title>
+    <link rel="stylesheet" href="../../../css/styles.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;600;700&display=swap" rel="stylesheet">
+  </head>
+  <body> 
+    <ul> 
+      <li><a href="./paginas/home.html">Home </a></li>
+      <li><a href="./paginas/about_us.html">About Us</a></li>
+      <li><a href="#">Contact us </a></li>
+    </ul>
+    <h1>The Alphabet, Vowels and consonants </h1><p>So Así que, entonces</p>
+<p>Are you ready? ¿Estas listo?</p>
+<p>Can I see it? ¿Puedo verlo?</p>
+<p>How about you? ¿Qué hay de tí?</p>
+    <footer>
+    </footer>
+  </body>
 </html>
