--- a/public/paginas/nivel1/grammar/egrammar.html
+++ b/public/paginas/nivel1/grammar/egrammar.html
@@ -7,6 +7,7 @@
     <title>Gramática del Inglés</title>
 </head>
 <body>
+    <a href="phrases.html">Frases.html</a>
     <h1>Construcción de oraciones simples</h1>
     <p>subject (<em>sob-llect</em>; sujeto)</p>
     <p>verb (<em>vurb</em>; verbo)</p>
