modificar html.html

--- a/public/paginas/lenguajes/html.html
+++ b/public/paginas/lenguajes/html.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Manual de HTML por Henry Flores</title>
+    <link rel="stylesheet" href="../../css/styles.css">
     <style media="screen">
       .enfacis {
                 color:red;
@@ -44,7 +45,7 @@
     </ul>
     Los comentarios no se pueden anidar.</p>
     <h2>Sección CDATA</h2>
-    <p>Para realizar comentarios más largos.<br/>
+    <p>Para realizar comentarios más largos ¿y cómo se usa?<br/>
     Los datos de un comentario o una sección DATA se pueden leer en la visualización del código fuente.</p>
     <h2 id="oWeb">Enlazar documentos e imágenes</h2>
     <p>Ejemplos: <a href="http://www.example.com/detailspecs.html">Enlace a otra WEB</a></p>
