--- a/public/paginas/lenguajes/git.html
+++ b/public/paginas/lenguajes/git.html
@@ -72,9 +72,11 @@
     <p id="newbranch">Para crear y extraer una rama distinta del HEAD actual:<br/>
     git checkout -b nueva_rama rama_existente
    </p>
+   <p>Para ver la configuración de GIT <br/>
+      git config --list</p>
     <p>Para configurar nombre de usuario y correo <br/>
-      git config --global user.name usuario_nombre <br/>  
-      git config --global user.email usuario_@correo
+      git config --global user.name "usuario_nombre" <br/>  
+      git config --global user.email "usuario_@correo"
     </p>
     <p>Para fusionar los cambios con la rama master, main, etc <br/>
       Las fusiones pueden ser fast-fordware (simples y automáticas. Pasa
