Generar llave ssh

--- a/public/paginas/lenguajes/git.html
+++ b/public/paginas/lenguajes/git.html
@@ -108,9 +108,11 @@
     <p>Para cambiar el mensaje del último commit:<br/>
       git commit --amend -m 'mensaje_a_cambiar'
     </p>
-
-
-
+    <p>Configurar llaves SSH en local <br/>
+      Para configurar ssh-keygen -t rsa -b 4096 -C "tu@email.com" <br/>
+      Para ubicar la carpeta de la llave pública cd .ssh/ <br/>
+      El nombre de la llave pública id_rsa.pub
+    </p>
 
   </body>
 </html>
