--- a/public/paginas/lenguajes/css.html
+++ b/public/paginas/lenguajes/css.html
@@ -44,5 +44,16 @@
     <p>title='un_título' (Para que aparesca cuando se hace foco sobre el elemento) </p>
     <p>poster='ruta_del_poster' (Para que aparesca una imagen al inicio del elemento)</p>
     <p>.player (Para crear un contenedor cuya clase se llama 'player')</p>
+    <p>box_sizing: border-box; <br/>
+      margin:0; <br/>
+      padding:0; <br/>
+    </p>
+    <h2>Display Flex</h2>
+    <p>display:flex<br/>
+      Si el padre tiene display flex los hijos se acomodan de forma
+      flexible. (Un padre que emcapsula a todos los hijos).
+      display-direction:row;
+      
+    </p>
   </body>
 </html>
