CSS flexbox flex-direction

--- a/public/paginas/lenguajes/css.html
+++ b/public/paginas/lenguajes/css.html
@@ -52,8 +52,11 @@
     <p>display:flex<br/>
       Si el padre tiene display flex los hijos se acomodan de forma
       flexible. (Un padre que emcapsula a todos los hijos).
-      display-direction:row;
-      
+      display-direction:row; (Dirección en la que se van a acomodar los
+      hijos). <br/>
+      flex-direction:row-reverse; (Invierte la posición normal de los conte
+      nedores).
     </p>
+    
   </body>
 </html>
