CSS flexbox justify_content

--- a/public/paginas/lenguajes/css.html
+++ b/public/paginas/lenguajes/css.html
@@ -50,13 +50,28 @@
     </p>
     <h2>Display Flex</h2>
     <p>display:flex<br/>
+      Debes tener un container principal al que agregar flex y ese container
+      va a heredar a los hijos y a los hijos de sus hijos. <br/>
       Si el padre tiene display flex los hijos se acomodan de forma
       flexible. (Un padre que emcapsula a todos los hijos).
       display-direction:row; (Dirección en la que se van a acomodar los
       hijos). <br/>
       flex-direction:row-reverse; (Invierte la posición normal de los conte
       nedores).
+      flex-direction:colum-reverse; (Invierte la posición de los elementos
+      dentro de la columna). <br/>
+      flex-wrap:wrap; (Cada uno de los elementos caundo ya no tiene espacio
+      se bajan a la siguiente fila de forma automática).
+      flex-wrap:wrap-reverse (Igual que el anterior pero invierte las posici
+      ciones). <br/>
+      justify-content: center Nos ayuda a alinear el contenido de forma
+      horizontal, centrar las cosas. justify-content:flex-end (todo a la
+      derecha). :flex-start  (todo a la izqyuerda) : spacearound (Espacio
+      entre contenedores) :space-evenly (Espacio justificado)<br/>
+      <h1>Posicionamiento de forma vertical</h1>
+
     </p>
-    
+
+
   </body>
 </html>
