css en css.html

--- a/public/paginas/lenguajes/css.html
+++ b/public/paginas/lenguajes/css.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html> 
   <head> 
-    <title> </title>
+    <title>Tutor CSS </title>
+    <link rel="stylesheet" href="../../css/stylecss.css">
   </head>
   <body> 
     <h1>Nociones básicas </h1>
