--- a/public/paginas/lenguajes/css.html
+++ b/public/paginas/lenguajes/css.html
@@ -69,7 +69,18 @@
       horizontal, centrar las cosas. justify-content:flex-end (todo a la
       derecha). :flex-start  (todo a la izqyuerda) : spacearound (Espacio
       entre contenedores) :space-evenly (Espacio justificado)<br/>
-      <h1>Posicionamiento de forma vertical</h1>
+    </p>
+    <h1>Posicionamiento de forma vertical</h1>
+    <p>
+      align-items:center; (Alineación al centro). <br/>
+      align-items:flex-end (Alineado hasta la parte de abajo de padre). <br/>
+      align-items:flex-start (Alineación arriba). <br/>
+      align-items:flex-stretch (Altura del contenedor padre). <br/>
+      align-items:flex-baseline (Toma el tamaño del contenido). <br/>
+
+    </p>
+    <h1>Orden de los contenedores</h1>
+    <p>
 
     </p>
 
