--- a/public/paginas/lenguajes/css.html
+++ b/public/paginas/lenguajes/css.html
@@ -116,8 +116,16 @@
       }
       </textarea>
     </p>
-    
+    <p>
+      flex-grow:1; (Asignarlo al contenedor que deseas que cresca). <br/>
 
+    </p>
+    <p>
+      flex-wrap; (En contenedor principal). <br/>
+      flex-basis:10rem; (En contenedores hijos). <br/>
+      flex-grow:1; (En contenedores hijos). <br/>
+    </p>
+    
 
   </body>
 </html>
