--- a/public/paginas/lenguajes/css.html
+++ b/public/paginas/lenguajes/css.html
@@ -11,7 +11,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
-  <body class="green lighten-5 green-text text-darken-4"> 
+  <!--<body class="ilike-green-container">  -->
+  <!--green-text text-darken-4  -->
+  <!--green lighten-5 -->
+    
+    <body class="uno">
     <h1>Nociones básicas </h1>
     <h2>Reglas de CSS</h2>
     <p>
