--- a/public/paginas/lenguajes/css.html
+++ b/public/paginas/lenguajes/css.html
@@ -36,7 +36,9 @@
     <p>otros valores de propiedades: <br/> 
       inline-size:32; (Ancho del texto de la linea) <br/> 
       block-size: 32; (Alto del texto en el eje Y) <br/> 
-      background-color: transparent (Color de fondo del elemento) 
+      background-color: transparent (Color de fondo del elemento) <br/>
+      La forma de estilizar várias clases a la vez es referenciandolas con , <br/>
+      .clase1, .clase2, .clase_etc{}
     </p>
     <p>
       Cuando el ancho es más grande los botones (por ejemplo) se empiezan a repetir, pero esto se puede corregir con 
@@ -161,6 +163,8 @@
 
     </p>
     <h1>Media Queries y Break Points</h1>
+    Por buenas prácticas los media queries tienen que ir hasta el final del css. <br/>
+    
     <p>
 
     </p>
