commit @media quiereis

--- a/public/paginas/lenguajes/css.html
+++ b/public/paginas/lenguajes/css.html
@@ -164,6 +164,11 @@
     </p>
     <h1>Media Queries y Break Points</h1>
     Por buenas prácticas los media queries tienen que ir hasta el final del css. <br/>
+    Ejemplo de media queries en css <br/>
+    @media (min-width: 480px){ <br/>
+      .... <br/>
+    } <br/>
+    Ejemplo de media queries aplicados directamente al head <br/>
     
     <p>
 
