media queries en head

--- a/public/paginas/lenguajes/css.html
+++ b/public/paginas/lenguajes/css.html
@@ -163,15 +163,15 @@
 
     </p>
     <h1>Media Queries y Break Points</h1>
-    Por buenas prácticas los media queries tienen que ir hasta el final del css. <br/>
-    Ejemplo de media queries en css <br/>
-    @media (min-width: 480px){ <br/>
-      .... <br/>
-    } <br/>
-    Ejemplo de media queries aplicados directamente al head <br/>
-    
     <p>
-
+      Por buenas prácticas los media queries tienen que ir hasta el final del css. <br/>
+      Ejemplo de media queries en css <br/>
+      @media (min-width: 480px){ <br/>
+      .... <br/>
+      } <br/>
+      Ejemplo de media queries aplicados directamente al head <br/>
+      link href="tablet.css" rel="stylesheet" media="screen and
+      (min-width: 768px)"
     </p>
     <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>button</a>
     
